Added redirect to wixsite
Added - more information to redirect to the old wiz website

Added - graphics and music folder

Added - added temporary graphics and music

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 ﻿<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<title> Bugged Laser Studios </title>
+	<body align = center>
+		<section>
+			<h1>Bugged Laser Studio's <br/> website </h1>
+			<p>This site is in progress... <br/> <br/> Press the link below to go to the old website</p>
+			<button type "button">
+				<a href = http://buggedlaser.wixsite.com/portfoliotk> Old site </a>
+			</button>
+		</section>
+		<section>
+			<img src="graphics/Rem.gif" alt="Rem" style="width:500px;height:281px;">
+			<p>--- Rem --- <br/> from Re:Zero kara Hajimeru Isekai Seikatsu </p>
+		</section>
+		<audio autoplay loop controls> 
+			<source src = "music/bgm.mp3" type = "audio/mpeg">
+		</audio>
+		<p>--- Music credits --- <br/> Artist: Kitkit Lu <br/> from the game VOEZ </p>
+	</body>
 </html>
