--- a/index.html
+++ b/index.html
@@ -1,21 +1,83 @@
-﻿<!DOCTYPE html>
-<html>
-	<title> Bugged Laser Studios </title>
-	<body align = center>
-		<section>
-			<h1>Bugged Laser Studio's <br/> website </h1>
-			<p>This site is in progress... <br/> <br/> Press the link below to go to the old website</p>
-			<button type "button">
-				<a href = http://buggedlaser.wixsite.com/portfoliotk> Old site </a>
-			</button>
-		</section>
-		<section>
-			<img src="graphics/Rem.gif" alt="Rem" style="width:500px;height:281px;">
-			<p>--- Rem --- <br/> from Re:Zero kara Hajimeru Isekai Seikatsu </p>
-		</section>
-		<audio autoplay loop controls> 
-			<source src = "music/bgm.mp3" type = "audio/mpeg">
-		</audio>
-		<p>--- Music credits --- <br/> Artist: Kitkit Lu <br/> from the game VOEZ </p>
-	</body>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Bugged Laser Studio</title>
+        <meta name="description" content="Website of Bugged Laser Studio">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">Bugged Laser Studio</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Porfolio</a></li>
+                        <li><a href="#">Resume</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+
+                <article>
+                    <header>
+                        <h1>About</h1>
+                        <p>ABOUT NG TIAN KIAT <br/>
+I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
+Most of my acquired skills are self-taught, taking my time out of school and life to study and research game development, art and  programming.
+I am very passionate about making games and exploring various tech, and working with different people.</p>
+                    </header>
+                    <section>
+                        <h2>Current Project</h2>
+                        <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my old <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> here </a></p>
+                    </section>
+                </article>
+
+                <aside>
+                    <h3>Work in progress...</h3>
+                    <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
+                </aside>
+
+            </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                  &copy; 2010<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Bugged Laser Studio.
+            </footer>
+        </div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+    </body>
 </html>
