Fixed some grammar and Hyper links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I am very passionate about making games and exploring various tech, and working 
                     </header>
                     <section>
                         <h2>Current Project</h2>
-                        <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my old <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> here </a></p>
+                        <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> old blog </a></p>
                     </section>
                 </article>
 
