Fixed footer copyright code

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I am very passionate about making games and exploring various tech, and working 
 
         <div class="footer-container">
             <footer class="wrapper">
-                  &copy; 2010<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script>, Bugged Laser Studio.
+                  &copy; 2016<script>document.write("-"+new Date().getFullYear());</script>, Bugged Laser Studio.
             </footer>
         </div>
 
