Added more pages
Added - Basic portfolio page
Added - Basic resume page

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,7 @@
 
                 <article>
                     <header>
-                        <h1>About</h1>
-                        <p>ABOUT NG TIAN KIAT <br/>
-I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
-Most of my acquired skills are self-taught, taking my time out of school and life to study and research game development, art and  programming.
-I am very passionate about making games and exploring various tech, and working with different people.</p>
+                        <h1>My Portfolio</h1>
                     </header>
                     <section>
                         <h2>Current Project</h2>
