--- a/resume.html
+++ b/resume.html
@@ -39,18 +39,29 @@
 
                 <article>
                     <header>
-                        <h1>About</h1>
-                        <p>ABOUT NG TIAN KIAT <br/>
-I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
-Most of my acquired skills are self-taught, taking my time out of school and life to study and research game development, art and  programming.
-I am very passionate about making games and exploring various tech, and working with different people.</p>
-                    </header>
-                    <section>
-                        <h2>Current Project</h2>
-                        <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> old blog </a></p>
-                    </section>
-                </article>
+                        <h1>What I have done</h1>
+                        <h2>EDUCATION:</h2>
 
+                        <p>2016 – 2014 Diploma in Multimedia & Animation, Ngee Ann Polytechnic<br/>2014 – 2010 ‘Express’ and ‘O’ levels, Fajar Secondary School</p>
+
+
+                        <h2>GAME DESIGN EXPERIENCE:</h2>
+
+                        <p>Produced a card game as part of Game Mechanics module.<br/>
+                         - Produced board game as part of Game Mechanics module.<br/>
+                         - Produced a 2D-platformer for a Problem Solving Programming module.<br/>
+                         - Produced 3D single-player FPS game individually for a Advanced Game Mechanics module.<br/>
+                         - Produced a 3D Online multiplayer vehicle CTF game in a team of 2 for a Advanced Game Mechanics module.</p>
+
+
+                        <h2>SKILLS AND PROFICIENCIES:</h2>
+                        <h3>Programming languages & others -</h3>
+                        <p> C#, JavaScript, HTML, CSS, NodeJS, AS3.</p>
+                        <h3>Programs -</h3>
+                        <p> Adobe Flash, Adobe Illustrator, Adobe Photoshop, Adobe Audition, Blender, Houdini, Maya, Mud Box, ProTools, Unity, Unreal Engine, Visual Studios.</p>
+                        ​
+                    </header>
+                </article>
                 <aside>
                     <h3>Work in progress...</h3>
                     <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
