Added portfolio content

--- a/index.html
+++ b/index.html
@@ -36,18 +36,27 @@
 
         <div class="main-container">
             <div class="main wrapper clearfix">
-
                 <article>
                     <header>
                         <h1>About</h1>
-                        <p>ABOUT NG TIAN KIAT <br/>
-I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
-Most of my acquired skills are self-taught, taking my time out of school and life to study and research game development, art and  programming.
-I am very passionate about making games and exploring various tech, and working with different people.</p>
                     </header>
                     <section>
-                        <h2>Current Project</h2>
-                        <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> old blog </a></p>
+                      <p>I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
+                      Most of my acquired skills are self-taught, taking my time out of school and life to study and research game development, art and  programming.
+                      I am very passionate about making games and exploring various tech, and working with different people.</p>
+                    </section>
+                </article>
+
+                <article>
+                    <header>
+                        <h1>Contact</h1>
+                    </header>
+                    <section>
+                      <p>
+                        Mobile: +65 8518 3248<br/>
+                        E-mail: ngtiankiat97@gmail.com<br/>
+                        <br/>
+                      </p>
                     </section>
                 </article>
 
