--- a/portfolio.html
+++ b/portfolio.html
@@ -37,20 +37,88 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                <article>
-                    <header>
-                        <h1>My Portfolio</h1>
-                    </header>
-                    <section>
-                        <h2>Current Project</h2>
-                        <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> old blog </a></p>
-                    </section>
-                </article>
-
-                <aside>
-                    <h3>Work in progress...</h3>
-                    <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
-                </aside>
+              <!-- <article>
+                  <header>
+                      <h1>My Portfolio</h1>
+                  </header>
+                  <section>
+                      <h2>Current Project</h2>
+                      <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year 2016, which you can find out from my <a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> old blog </a></p>
+                  </section>
+              </article> -->
+              <!-- Header -->
+              <article>
+                  <header>
+                      <h1>My Portfolio</h1>
+                  </header>
+                  <section>
+                      <h2>Current Project</h2>
+                      <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year, 2016, which you can find out from my old<a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> blog </a></p>
+                  </section>
+              </article>
+              <aside>
+                  <h3>Work in progress...</h3>
+                  <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
+              </aside>
+              <!-- Spy Alone Complex -->
+              <article>
+                  <header>
+                      <h1>Spy Alone Complex</h1>
+                  </header>
+                  <section>
+                    <video controls width="100%">
+                      <source src="videos/Spy Alone Complex- Deaths Trending.mp4" type="video/mp4">
+                        Your browser does not support video tag
+                    </video>
+                  <section>
+                      <h2>One button game</h2>
+                      <p>
+                        Duration: 3 weeks<br/>
+                        Roles: Game designer, Programmer, VFX artist<br/>
+                        Description: The game is about being a spy, and infiltrating corporations.
+                        Your goal is to reach the deepest parts of the building and retrieving the stolen formula, all the while hiding and avoiding security guards, camera and burning hot laser traps.
+                        <br/>
+                      </p>
+                  </section>
+              </article>
+              <!-- Infinite chase online -->
+              <article>
+                  <header>
+                      <h1>Infinite Chase Online</h1>
+                  </header>
+                  <section>
+                    <video controls width="100%">
+                      <source src="videos/Infinite Chase Online Trailer.mp4" type="video/mp4">
+                        Your browser does not support video tag
+                    </video>
+                  <section>
+                      <h2>Multiplayer Vehicle CTP</h2>
+                      <p>
+                        Duration: 6 weeks<br/>
+                        Roles: Game designer, Programmer<br/>
+                        Description: An online multiplayer vehicle "capture the flag" demo game. Two players go head to head, to capture the flag and rack up the most number of points. Use Wacky weapons and stunts to attack and defend and out play your opponent.
+                      </p>
+                  </section>
+              </article>
+              <!-- Infinite chase online -->
+              <article>
+                  <header>
+                      <h1>3D Environmental Demo Reel</h1>
+                  </header>
+                  <section>
+                    <video controls width="100%">
+                      <source src="videos/3D Environmental Modelling Exterior Reel.mp4" type="video/mp4">
+                        Your browser does not support video tag
+                    </video>
+                  <section>
+                      <h2>3D modelling demo</h2>
+                      <p>
+                        Duration: 1 day<br/>
+                        Roles: 3D modeler, Texture Artist, Programmer<br/>
+                        Description: A 3D environment modelling demo made in Maya and Unity.
+                      </p>
+                  </section>
+              </article>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -60,7 +128,11 @@
                   &copy; 2016<script>document.write("-"+new Date().getFullYear());</script>, Bugged Laser Studio.
             </footer>
         </div>
-
+        <script>
+              document.getElementsByTagName('video')[0].volume = 0.5;
+              document.getElementsByTagName('video')[1].volume = 0.5;
+              document.getElementsByTagName('video')[2].volume = 0.5;
+        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
