--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,8 @@
                         <p> C#, JavaScript, HTML, CSS, NodeJS, AS3.</p>
                         <h3>Programs -</h3>
                         <p> Adobe Flash, Adobe Illustrator, Adobe Photoshop, Adobe Audition, Blender, Houdini, Maya, Mud Box, ProTools, Unity, Unreal Engine, Visual Studios.</p>
-                        ​
+                        <!-- <h2>CERTIFICATION:</h2>
+                        <p> AAdobe Photoshop</p> -->
                     </header>
                 </article>
                 <aside>
