Font test commit
Testing google font api

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,14 +51,10 @@
                   <header>
                       <h1>My Portfolio</h1>
                   </header>
-                  <section>
-                      <h2>Current Project</h2>
-                      <p>I am currently working my final year project for school. It will mostly be completing the project that was started in the beginning of this year, 2016, which you can find out from my old<a href = "http://buggedlaser.wixsite.com/portfoliotk/blog/"> blog </a></p>
-                  </section>
               </article>
               <aside>
-                  <h3>Work in progress...</h3>
-                  <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
+                  <h3>Current Project</h3>
+                  <p> I am currently working on a <b> VR Sci-fi survival </b> game for my final year project. You can check its progress <a = href="https://www.facebook.com/CygniTheGame/">here</a></p>
               </aside>
               <!-- Spy Alone Complex -->
               <article>
