--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="icon" href="favicon.ico">
+        <!-- Google font references -->
+        <link href="fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <style>
+          @import url('https://fonts.googleapis.com/css?family=Oswald');
+        </style>
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
@@ -21,7 +27,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="header-container">
+        <div class="header-container" style="font-family: 'Oswald', sans-serif;">
             <header class="wrapper clearfix">
                 <h1 class="title">Bugged Laser Studio</h1>
                 <nav>
