--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,11 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="graphics/favicon.ico">
+        <!-- Google font references -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
@@ -22,7 +26,9 @@
         <![endif]-->
 
         <div class="header-container">
+
             <header class="wrapper clearfix">
+              <img src="graphics/BLS_Logo.png" />
                 <h1 class="title">Bugged Laser Studio</h1>
                 <nav>
                     <ul>
@@ -63,10 +69,6 @@
                         <p> AAdobe Photoshop</p> -->
                     </header>
                 </article>
-                <aside>
-                    <h3>Work in progress...</h3>
-                    <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
-                </aside>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -77,19 +79,19 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
 
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!-- <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script> -->
     </body>
 </html>
