--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="graphics/favicon.ico">
         <!-- Google font references -->
-        <link href="fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <style>
-          @import url('https://fonts.googleapis.com/css?family=Oswald');
-        </style>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -27,8 +25,9 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="header-container" style="font-family: 'Oswald', sans-serif;">
+        <div class="header-container">
             <header class="wrapper clearfix">
+              <img src="graphics/BLS_Logo.png" />
                 <h1 class="title">Bugged Laser Studio</h1>
                 <nav>
                     <ul>
@@ -47,12 +46,16 @@
                         <h1>About</h1>
                     </header>
                     <section>
-                      <p>I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
+                      <p> I am an aspiring Indie Developer currently studying in Ngee Ann Polytechnic in Singapore. I have officially studied game development for 3 years, but I have been studying game development and programming for more than 5 years.
                       Most of my acquired skills are self-taught, taking my time out of school and life to study and research game development, art and  programming.
                       I am very passionate about making games and exploring various tech, and working with different people.</p>
                     </section>
                 </article>
-
+                <article>
+                    <section>
+                      <br/><br/><br/><br/><br/><br/>
+                    </section>
+                </article>
                 <article>
                     <header>
                         <h1>Contact</h1>
@@ -61,15 +64,11 @@
                       <p>
                         Mobile: +65 8518 3248<br/>
                         E-mail: ngtiankiat97@gmail.com<br/>
-                        <br/>
+                        LinkedIn: https://sg.linkedin.com/in/tiankiatng<br/>
+                        <!-- E-mail: ngtiankiat97@gmail.com<br/> -->
                       </p>
                     </section>
                 </article>
-
-                <aside>
-                    <h3>Work in progress...</h3>
-                    <p>This website is still in progress. I am still working on porting my old blog content to this site and that will take quite awhile. <br/> Meanwhile you can check out my old website, for more information on my portfolio and developer blog, <a href="http://buggedlaser.wixsite.com/portfoliotk">here. </a></p>
-                </aside>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
@@ -80,19 +79,19 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
 
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!-- <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script> -->
     </body>
 </html>
