--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,11 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="graphics/favicon.ico">
+        <!-- Google font references -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
@@ -22,7 +26,9 @@
         <![endif]-->
 
         <div class="header-container">
+
             <header class="wrapper clearfix">
+              <img src="graphics/BLS_Logo.png" />
                 <h1 class="title">Bugged Laser Studio</h1>
                 <nav>
                     <ul>
@@ -47,15 +53,9 @@
                   </section>
               </article> -->
               <!-- Header -->
-              <article>
-                  <header>
-                      <h1>My Portfolio</h1>
-                  </header>
-              </article>
-              <aside>
-                  <h3>Current Project</h3>
-                  <p> I am currently working on a <b> VR Sci-fi survival </b> game for my final year project. You can check its progress <a = href="https://www.facebook.com/CygniTheGame/">here</a></p>
-              </aside>
+                <header>
+                    <h1>My Portfolio</h1>
+                </header>
               <!-- Spy Alone Complex -->
               <article>
                   <header>
@@ -115,7 +115,10 @@
                       </p>
                   </section>
               </article>
-
+              <aside>
+                  <h3>Current Project</h3>
+                  <p> I am currently working on a <b> VR Sci-fi survival </b> game for my final year project. You can check its progress <a = href="https://www.facebook.com/CygniTheGame/">here</a></p>
+              </aside>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
@@ -129,19 +132,19 @@
               document.getElementsByTagName('video')[1].volume = 0.5;
               document.getElementsByTagName('video')[2].volume = 0.5;
         </script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
 
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!-- <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script> -->
     </body>
 </html>
