--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,65 @@
                 <header>
                     <h1>My Portfolio</h1>
                 </header>
+                <!-- VR -->
+                <article>
+                    <header>
+                        <h1>VR Interactive Menu</h1>
+                    </header>
+                    <section>
+                      <video controls width="100%">
+                        <!-- <source src=""> -->
+                          Your browser does not support video tag
+                      </video>
+                    <section>
+                        <h2>An interactive menu</h2>
+                        <p>
+                          Duration: 1 weeks<br/>
+                          Roles: Designer, Programmer, Artist<br/>
+                          Description: An Interactive menu I made for my final year project which aims to take full advantage of the VR medium.
+                          <br/>
+                        </p>
+                    </section>
+                </article>
+                <!-- 3D Art -->
+                <article>
+                    <header>
+                        <h1>3D Art Expriments</h1>
+                    </header>
+                    <section>
+                        <h2>3D props</h2>
+                        <p>
+                          Duration: 2 days<br/>
+                          Roles: 3D Artis<br/>
+                          Description: Props modelled for my final year project, using a Maya > Substance > Unity workflow.
+                          <br/>
+                        </p>
+                    </section>
+                    <section>
+                        <h2>Cygni Canister</h2>
+                    </section>
+                    <section>
+                      <div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/9c96aa43931c4eabb6bbdb7a4b863aa2/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+
+                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+                        <a href="https://sketchfab.com/models/9c96aa43931c4eabb6bbdb7a4b863aa2?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Cygni Energy canister</a>
+                        by <a href="https://sketchfab.com/NTK?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">NTK</a>
+                        on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+                      </p>
+                    </div>
+                    <section>
+                        <h2>Cygni Crate</h2>
+                    </section>
+                    <div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/80e807586721452fbb3cee7f3860b7f0/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+
+                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+                        <a href="https://sketchfab.com/models/80e807586721452fbb3cee7f3860b7f0?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Cygni Crate</a>
+                        by <a href="https://sketchfab.com/NTK?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">NTK</a>
+                        on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+                      </p>
+                    </div>
+
+                </article>
               <!-- Spy Alone Complex -->
               <article>
                   <header>
@@ -88,18 +147,18 @@
                         Your browser does not support video tag
                     </video>
                   <section>
-                      <h2>Multiplayer Vehicle CTP</h2>
+                      <h2>Multiplayer Vehicular "CTP"</h2>
                       <p>
-                        Duration: 6 weeks<br/>
-                        Roles: Game designer, Programmer<br/>
-                        Description: An online multiplayer vehicle "capture the flag" demo game. Two players go head to head, to capture the flag and rack up the most number of points. Use Wacky weapons and stunts to attack and defend and out play your opponent.
+                        Duration: 4 weeks<br/>
+                        Roles: 3D Artist, Game designer, Programmer<br/>
+                        Description: An online multiplayer vehicle "capture the flag" demo game. Two players go head to head, to capture the flag and rack up the most number of points. Use Wacky weapons and stunts to attack and defend and outplay your opponent.
                       </p>
                   </section>
               </article>
               <!-- Infinite chase online -->
               <article>
                   <header>
-                      <h1>3D Environmental Demo Reel</h1>
+                      <h1>Environmental modelling Reel</h1>
                   </header>
                   <section>
                     <video controls width="100%">
@@ -107,18 +166,14 @@
                         Your browser does not support video tag
                     </video>
                   <section>
-                      <h2>3D modelling demo</h2>
+                      <h2>Environmental modelling</h2>
                       <p>
-                        Duration: 1 day<br/>
-                        Roles: 3D modeler, Texture Artist, Programmer<br/>
-                        Description: A 3D environment modelling demo made in Maya and Unity.
+                        Duration: 2 days<br/>
+                        Roles: 3D artist, Programmer<br/>
+                        Description: A 3D environment modelling demo made with Maya and Unity.
                       </p>
                   </section>
               </article>
-              <aside>
-                  <h3>Current Project</h3>
-                  <p> I am currently working on a <b> VR Sci-fi survival </b> game for my final year project. You can check its progress <a = href="https://www.facebook.com/CygniTheGame/">here</a></p>
-              </aside>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
