--- a/resume.html
+++ b/resume.html
@@ -48,23 +48,29 @@
                         <h1>What I have done</h1>
                         <h2>EDUCATION:</h2>
 
-                        <p>2016 – 2014 Diploma in Multimedia & Animation, Ngee Ann Polytechnic<br/>2014 – 2010 ‘Express’ and ‘O’ levels, Fajar Secondary School</p>
+                        <p>
+                          2017 - 2016 Bachelor of Science: Computer Science & Game Design (Immersion), DigiPen Institute of Technology <br/>
+                          2016 – 2014 Diploma in Multimedia & Animation, Ngee Ann Polytechnic<br/>
+                          2014 – 2010 ‘Express’ and ‘O’ levels, Fajar Secondary School
+                        </p>
 
 
-                        <h2>GAME DESIGN EXPERIENCE:</h2>
+                        <h2>GAME DESIGN EXPERIENCE and Programming:</h2>
 
-                        <p>Produced a card game as part of Game Mechanics module.<br/>
-                         - Produced board game as part of Game Mechanics module.<br/>
-                         - Produced a 2D-platformer for a Problem Solving Programming module.<br/>
-                         - Produced 3D single-player FPS game individually for a Advanced Game Mechanics module.<br/>
+                        <p>Produced a cosplay themed card game as part of Game Mechanics module.<br/>
+                         - Produced search & rescue themed board game as part of Game Mechanics module.<br/>
+                         - Produced a fast paced hardcore 2D-platformer for a Problem Solving Programming module.<br/>
+                         - Produced 3D single-player FPS game for a Advanced Game Mechanics module.<br/>
                          - Produced a 3D Online multiplayer vehicle CTF game in a team of 2 for a Advanced Game Mechanics module.</p>
+                         - Produced a 2D sprite based speed typing game from scratch using Visual Studios and C during my study in DigiPen.</p>
+                         - Produced Sci-fi VR survival game for my final year project in Ngee Ann Polytechnic</p>
 
 
                         <h2>SKILLS AND PROFICIENCIES:</h2>
                         <h3>Programming languages & others -</h3>
-                        <p> C#, JavaScript, HTML, CSS, NodeJS, AS3.</p>
+                        <p>C, C#, JavaScript, HTML, CSS, NodeJS, AS3.</p>
                         <h3>Programs -</h3>
-                        <p> Adobe Flash, Adobe Illustrator, Adobe Photoshop, Adobe Audition, Blender, Houdini, Maya, Mud Box, ProTools, Unity, Unreal Engine, Visual Studios.</p>
+                        <p> Adobe Flash, Adobe Illustrator, Adobe Photoshop, Adobe Audition, Blender, Houdini, Maya, Mud Box, ProTools, Substance Designer, Substance Painter, Unity, Unreal Engine, Visual Studios.</p>
                         <!-- <h2>CERTIFICATION:</h2>
                         <p> AAdobe Photoshop</p> -->
                     </header>
